--- a/Pokemon/src/index.css
+++ b/Pokemon/src/index.css
@@ -1,8 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css?family=Fira Sans');
 
-*{
-    font-family: 'Fira Sans', sans-serif;
-    }
+*{font-family: 'Roboto', sans-serif;}
