--- a/Pokemon/src/index.css
+++ b/Pokemon/src/index.css
@@ -1,6 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Poppins');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-*{font-family: 'Roboto', sans-serif;}
+*{font-family: 'Poppins', sans-serif;}
+.customShadow {
+    box-shadow: 0 0 20px rgba(248, 125, 10, 0.474);
+  }
