--- a/Pokemon/src/index.css
+++ b/Pokemon/src/index.css
@@ -4,6 +4,28 @@
 @tailwind utilities;
 
 *{font-family: 'Poppins', sans-serif;}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 .customFireShadow {
     box-shadow: 0 0 20px rgba(248, 125, 10, 0.474);
   }
